Run tests with jdk17 (#5598)