@@ -41,3 +41,9 @@ dependencies {
 
   latestDepTestLibrary("org.hibernate:hibernate-entitymanager:5.+")
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
